src/engine-gpgsm.c
@@ -474,7 +474,7 @@ gpgsm_new (void **engine, const char *file_name, const char *home_dir,
   err = _gpgme_getenv ("DISPLAY", &dft_display);
   if (err)
     goto leave;
-  if (dft_display)
+  if (dft_display && *dft_display)
     {
       if (gpgrt_asprintf (&optstr, "OPTION display=%s", dft_display) < 0)
         {
@@ -490,6 +490,8 @@ gpgsm_new (void **engine, const char *file_name, const char *home_dir,
       if (err)
 	goto leave;
     }
+  else
+    free (dft_display);
 
   err = _gpgme_getenv ("GPG_TTY", &env_tty);
   if (isatty (1) || env_tty || err)
